# TIRC_benchmarks

./: README.md
c_c/: CMakeLists.txt  HEMatrixMultiplier.cpp  HEMatrixMultiplier.h  qk_main.cpp  sv_main.cpp
c_p/: CMakeLists.txt  HEMatrixMultiplier.cpp  HEMatrixMultiplier.h  main.cpp
mpc/EzPC/SCI/cmake/: SCIConfig.cmake
mpc/EzPC/SCI/src/FloatingPoint/: fixed-point.cpp  fixed-point.h  fp-math.cpp  fp-math.h
mpc/EzPC/SCI/tests/: CMakeLists.txt
mpc/EzPC/SCI/tests/mpc/: CMakeLists.txt  test-gelu.cpp  test-layernorm.cpp  test-rms.cpp  test-silu.cpp  test-softmax.cpp
